try to fix big layout shifts

--- a/server/hadith_app/static/css/style.css
+++ b/server/hadith_app/static/css/style.css
@@ -20,7 +20,7 @@ h1 {
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
-  max-width: 600px;
+  max-width: 80%;
   max-height: 80vh;
   overflow-y: auto;
 }
@@ -122,6 +122,7 @@ details p {
   align-items: center;
   margin-top: 1rem;
   margin-bottom: .25rem;
+  min-width: 28rem;
 }
 
 .btn {
@@ -148,15 +149,20 @@ details p {
 }
 
 #arCopyButton,
-#enCopyButton,
-#firefox-btn,
-#chrome-btn,
-#showNewHadith {
-  display: flex;
+#enCopyButton {
+  display: inline-flex;
+  min-width: 3.125rem;
 }
 
 #arCopyButton span {
   margin-right: 0.25rem;
+}
+
+#showNewHadith,
+#firefox-btn,
+#chrome-btn {
+  display: inline-flex;
+  min-width: 9.375rem;
 }
 
 #notification {
@@ -206,7 +212,6 @@ details p {
 @media (min-width: 768px) {
   .quote-container {
     text-align: left;
-    max-width: 80%;
   }
   .quote-container div.quotes {
     display: flex;
